--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,8 @@ jobs:
 
       - run: npm run build
         working-directory: ./web
+        env:
+          VITE_ORS_API_KEY: ${{ secrets.VITE_ORS_API_KEY }}
 
   build-admin:
     runs-on: ubuntu-latest
@@ -89,4 +91,6 @@ jobs:
         working-directory: ./monitor
 
       - run: npm run build
-        working-directory: ./monitor
+        working-directory: ./
+        env:
+          VITE_ORS_API_KEY: ${{ secrets.VITE_ORS_API_KEY }}
