--- a/web/package.json
+++ b/web/package.json
@@ -14,9 +14,11 @@
     "bootstrap-icons": "^1.13.1",
     "firebase": "^12.6.0",
     "framer-motion": "^12.23.12",
+    "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.1",
     "react-toastify": "^11.0.5",
     "swiper": "^12.0.1"
